2007-11-20  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix for Windows. Don't use WebCore/move-js-headers.sh as
        it indiscriminately copies any headers inside JavaScriptCore,
        which includes Tiger ICU headers. 

        * webcore-base.bkl:
        Remove references to the WebCore/include dir generated by
        move-js-headers.sh, and also get headers from JavaScriptCore
        directly rather than from WebCore/ForwardingHeaders. 

2007-11-20  Alp Toker  <alp@atoker.com>

        Reviewed by Mark Rowe.

        Avoid pointlessly mallocing and freeing this transform matrix.

        * platform/gtk/FontPlatformDataGtk.cpp:
        (WebCore::FontPlatformData::FontPlatformData):

2007-11-20  Naiem Shaik  <naiem.shaik@gmail.com>

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=15763
        [GTK] Enter key does not take to the link highlighted.

        Add missing keycode cases.

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::keyIdentifierForGdkKeyCode):
        (WebCore::windowsKeyCodeForKeyEvent):
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):

2007-11-20  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        Fix http://bugs.webkit.org/show_bug.cgi?id=16074
        Bug 16074: execCommand("InsertHorizontalRule", false, "") results in id="" being inserted

        For consistency with InsertOrderedList and InsertUnorderedList a value parameter of "" should
        not result in an id being set.

        * editing/JSEditor.cpp: Don't set the id attribute if value is empty.

2007-11-20  Dan Bernstein  <mitz@apple.com>

        Reviewed by Adam Roben.

        - fix <rdar://problem/5090708> Textareas render broken-looking scrollbars when too short to show full scrollbar

        * platform/win/PlatformScrollBar.h:
        * platform/win/PlatformScrollBarSafari.cpp:
        Added the "hit inset" constants (representing how far the track eats