@@ -390,6 +390,11 @@ body.attached #attachToggle:active {
     -webkit-box-sizing: border-box;
     list-style: none;
     font-size: 11px;
+    -webkit-transition: bottom 250ms ease-in-out;
+}
+
+#status.visible {
+    bottom: 21px;
 }
 
 #status li {
@@ -468,6 +473,11 @@ body.attached #attachToggle:active {
     -webkit-box-sizing: border-box;
     list-style: none;
     font-size: 11px;
+    -webkit-transition: bottom 250ms ease-in-out;
+}
+
+#list.status-visible {
+    bottom: 99px;
 }
 
 #list > li {
@@ -1936,12 +1946,19 @@ body:not(.inactive) .focused .outline-disclosure li.selected * {
 
 .tip-balloon {
     position: absolute;
-    left: 145px;
+    left: 160px;
     top: -5px;
     z-index: 1000;
     border-width: 51px 15px 18px 37px;
     -webkit-border-image: url(Images/tipBalloon.png) 51 15 18 37;
     width: 265px;
+    opacity: 0;
+    -webkit-transition: left 250ms ease-in-out, opacity 250ms ease-in-out; 
+}
+
+.tip-balloon.visible {
+    left: 145px;
+    opacity: 1;
 }
 
 .tip-balloon.bottom {
